# MAIA

./: CMakeLists.txt  README.md  release_notes.txt
components/app/: CMakeLists.txt
components/app/include/: app.h  app_tasks.h
components/app/src/: app.c  task_display.c  task_haptic.c  task_monitor.c  task_sensing.c
components/drivers/: CMakeLists.txt
components/drivers/button/include/: button.h
components/drivers/button/src/: button.c
components/drivers/drv2605l/: CMakeLists.txt
components/drivers/drv2605l/include/: drv2605l.h
components/drivers/drv2605l/src/: drv2605l.c
components/drivers/ds18b20/: CMakeLists.txt
components/drivers/ds18b20/include/: ds18b20.h
components/drivers/ds18b20/src/: ds18b20.c
components/drivers/mpu6050/: CMakeLists.txt
components/drivers/mpu6050/include/: mpu6050.h
components/drivers/mpu6050/src/: mpu6050.c
components/drivers/ssd1306/: CMakeLists.txt
components/drivers/ssd1306/include/: ssd1306.h
components/drivers/ssd1306/src/: ssd1306.c
components/drivers/vl53l5cx/: CMakeLists.txt
components/drivers/vl53l5cx/include/: vl53l5cx.h
components/drivers/vl53l5cx/src/: vl53l5cx.c
components/maia_board/: CMakeLists.txt  Kconfig
components/maia_board/include/: maia_board.h
components/maia_board/src/: maia_board.c  maia_config.c  maia_gpio.c  maia_i2c.c  maia_led.c  maia_onewire.c  maia_pwm.c
components/services/data_logger/: CMakeLists.txt
components/services/data_logger/include/: data_logger.h
components/services/data_logger/src/: data_logger.c
components/services/haptic_feedback/: CMakeLists.txt
components/services/haptic_feedback/include/: haptic_feedback.h
components/services/haptic_feedback/src/: haptic_feedback.c
components/services/obstacle_detection/: CMakeLists.txt
components/services/obstacle_detection/include/: obstacle_detection.h
components/services/obstacle_detection/src/: obstacle_detection.c
components/services/power_manager/: CMakeLists.txt
components/services/power_manager/include/: power_manager.h
components/services/power_manager/src/: power_manager.c
components/services/status_monitor/: CMakeLists.txt
components/services/status_monitor/include/: status_monitor.h
components/services/status_monitor/src/: status_monitor.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/tests/: test_blink.c  test_button.c  test_drv2605l.c  test_ds18b20.c  test_ssd1306.c  tests.h
